swagger adjust
